Fix nav icons on IE11
The search box at the top-right is still misaligned though :P

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -151,6 +151,7 @@ label[for] {
 
 .nav-link-discord > svg {
     width: 20px;
+    height: 20px;
     fill: $navbar-dark-color;
 }
 
@@ -160,6 +161,7 @@ label[for] {
 
 .nav-link-gitlab > svg {
     width: 20px;
+    height: 20px;
     fill: $navbar-dark-color;
 }
 
